Fix some spacing, added switch classes

--- a/assets/stylesheets/global.scss
+++ b/assets/stylesheets/global.scss
@@ -13,6 +13,7 @@ input[type="text"]{
 }
 
 #wrapper {
+  padding: 30px 0;
   border-bottom: 10px solid $ministry-of-justice;
   body.alpha & {
     border-bottom: 10px solid $alphacolour;
